# faq-agent

./: .coveragerc  .gitignore  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  search_agent.py
.github/workflows/: ci.yml
app/: __init__.py  app.py  main.py  requirements.txt
tests/: search_tools.py  test_app_run.py  test_app_stream.py  test_imports.py  test_smoke.py
