[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faq-agent"
version = "0.1.0"
description = "Streamlit app for FAQ agent"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "streamlit>=1.50.0",
  "minsearch>=0.0.7",
  "openai>=1.108.2",
  "pydantic>=2.12.3",
  "pydantic-ai>=1.1.0",
  "python-frontmatter>=1.1.0",
  "requests>=2.32.5",
  "python-dotenv>=1.0.1",
  "groq>=0.32.0",
  "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
  # extras instaláveis com: pip install ".[dev]"
]
